# Blacklisting-Based-Authentication

./: .gitignore  README.md
blac/: CMakeLists.txt
blac/blac/: acc.cpp  acc.hpp  aho.cpp  aho.hpp  helpers.hpp  main.cpp  serviceprovider.cpp  serviceprovider.hpp  user.cpp  user.hpp
blacw/: CMakeLists.txt  README.md
blacw/blacw/: Acc.cpp  Acc.hpp  BLACWHolder.cpp  BLACWHolder.hpp  BLACWIssuer.cpp  BLACWIssuer.hpp  Com.hpp  bn_pairing.cpp  bn_pairing.hpp  helpers.cpp  helpers.hpp  main.cpp  maingenkey.cpp
perea/: Acc.cpp  Acc.hpp  CMakeLists.txt  Issuer.cpp  Issuer.hpp  QueueSig.cpp  QueueSig.hpp  User.cpp  User.hpp  helpers.cpp  helpers.hpp  main.cpp
privacy_preserving_borrowing/: CMakeLists.txt  mirdef.h  private.key  private3072.key  public.key  public3072.key
privacy_preserving_borrowing/ppb/: Acc.cpp  Acc.hpp  Com.cpp  PPBHolder.cpp  PPBHolder.hpp  PPBIssuer.cpp  PPBIssuer.hpp  SPSEQ.cpp  SPSEQ.hpp  TLP.cpp  TLP.hpp  helpers.cpp  helpers.hpp  main.cpp
